source/assets/styles/updated_homepage_CSS.css
/* ... */
.outer {
    height: 160px;
    width: 160px;
    padding: 20px;

    /* box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.1),
                -6px -6px 10px -1px rgba(255, 255, 255, 0.7); */
    border-radius: 50%;
}

.inner {
    height: 120px;
    width: 120px;

    /* box-shadow: inset 4px 4px 6px -1px rgba(0, 0, 0, 0.2),
                inset -4px -4px 6px -1px rgba(255, 255, 255, 0.7),
                -0.5px -0.5px 0px rgba(255, 255, 255, 1),
                0.5px 0.5px 0px rgba(0, 0, 0, 0.15),
                0px 12px 10px -10px rgba(0, 0, 0, 0.05); */
    border-radius: 50%;
    justify-content: center;
    display: flex;
    align-items: center;
}

#progress-number {
    font-weight: 600;
    font-size: 150%;
    color:azure;
}

#moving-progress {
    fill: none;
    stroke: #BBEDEA;
    stroke-width: 20px;
    stroke-dasharray: 450;
    stroke-dashoffset: 450;
    animation: anim 2s linear forwards;
}

#stationary-progress {
    fill: none;
    stroke: #6BAD9D;
    stroke-width: 20px;
}

@keyframes anim {
    100%{
        stroke-dashoffset: 230;
    }
}

svg {
    position: absolute;
    top: 0;
    left: 0;
}

/* Tasks Overview */
iframe {
    background-color: whitesmoke;
    height: 30vh;
    width: 90%;
    border-radius: 25px;
    box-shadow: 5px 5px rgba(0 0 0 50%);
}

/* Recently viewed projects section */

/* Making the cards */

/* Card: Card Size, text size, formatting */
.project-cards {
    box-shadow: 0 4px 8px 0 rgba(238 235 235 20%);
    transition: 0.3s;
    width: 240px;
    height: auto;
    border-radius: 25px;

    /* margin: 20px 20px 0px 20px; */
}

.project-cards div h4 {
    font-size: 110%;
    margin-top: 10px;
    margin-left: 5px;
}

.project-cards div p {
    font-size: 105%;
    margin-top: 10px;
    margin-left: 5px;
}

.project-cards hr {
    width: 85%;
    margin: auto;
    margin-top: 30px;
    margin-bottom: 10px;
}

.project-cards:hover {
    box-shadow: 0 8px 16px 0 rgba(230 230 230 70%);
}

.individual-project-card-container {
    padding: 2px 16px;
}

.cards-log-journal-pic {
    height: auto;
    width: 35%;
    margin: 10px 0 0 20px;
}

/* Card: background and text color */
#brown-back-card {
    background-color: #CAAF8E;
    color: #5B4B34;
    grid-area: brownBack;
}

#blue-back-card {
    background-color: #3F8984;
    color: #F6F1E2;
    grid-area: blueBack;
}

#off-white-back-card {
    background-color: #F6F1E2;
    color: #2B3E55;
    grid-area: offWhiteBack;
}

#white-back-card {
    background-color: #FFF;
    color: #2B3E55;
    grid-area: whiteBack;
}*/

/* Card: github and external link icons */
.external-icon  {
    height: auto;
    width: 10%;
    margin: 40px 0 20px 20px;
}

.github-icon {
    height: auto;
    width: 10%;
    margin: 40px 0 20px;
}

/* Positioning cards in a container */
#project-cards-title { 
    grid-area: cardsTitle;
    font-size: 35px;
    text-shadow: 1px 1px 2px #93b1af;
}

.project-cards-container {
    /*display: grid;
    grid-template-areas: 
        'cardsTitle cardsTitle .            .'
        'brownBack  blueBack   offWhiteBack whiteBack';
    gap: 3vw;
    row-gap: 1vh;*/
    grid-area: projCardsCont;
}
.project-cards-grid{
    display:grid;
    grid-template-columns: repeat(4, 20%);
    margin-top: 15px;
}

/* Dashboard content section */
.task-overview { grid-area: task-overview; }
.overall-progress { grid-area: overallProg; }


.dashboard-container {
    display: grid;
    grid-template-columns: 50% 40%;
    grid-template-areas: 
        'task-overview  overallProg'
        'projCardsCont projCardsCont';
    gap: 20px;
    margin-top: 20px;
    justify-content: center;
    
}

.dashboard-container > .task-overview {
    margin-left: 4vw;
}

/* Title of task overview section */
.task-overview h2 {
    font-size: 35px;
    margin-bottom: 1vh;
    text-shadow: 1px 1px 2px #93b1af;
}

/* Title of progress section */
.overall-progress h2 {
    font-size: 35px;
    margin-bottom: 1vh;
    text-shadow: 1px 1px 2px #93b1af;
}
/* ... */

